--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,17 +1,20 @@
-body {
+*{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
-
-body {
-    margin: 0;
-    padding: 0;
+html{
+    height: 100%;
+}
+body{
+    height: 100%;
+    display: flex;
+    background-color: #31829b;
 }
 
 .sidebar {
     height: 100%;
-    width: 200px;
-    position: fixed;
+    position: relative;
     top: 0;
     left: 0;
     background-color: #333;
@@ -29,179 +32,152 @@ body {
 }
 
 .sidebar ul li a {
+    transition: 1s;
     display: block;
     padding: 20px;
+    width: 180px;
+    text-align: center;
+}
+.sidebar ul li .e{
     color: #fff;
     text-decoration: none;
 }
-
+.sidebar ul li .i{
+    color: #fff;
+    text-decoration: none;
+}
 .sidebar ul li a:hover {
+    transition: .5s;
     background-color: #666;
 }
 
 header{
-    background: #68b7cf;
-    height: 100px;
-    width: 100%;
-    margin: 0px;
+    align-items: center;
+    background-color: #68b7cf;
+    display: flex;
+    justify-content: center;
+}
+.fit{
+    background-color: #31829b;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-size: 20px;
+}
+.fit img{
+    width: 40%;
+    border-radius: 5px;
+    max-width: 350px;
+    min-width: 90px;
+}
+.renovables{
+    padding: 15px;
+    margin-bottom: 150px;
+}
+.contenedor1{
+    display: flex;
+    padding-top: 5%;
+    padding-left: 5%;
+    padding-right: 15%;
+    justify-content: space-between;
+    align-items: center;
+}
+.contenedor1 p{
+    width: 45%;
+    min-width: 150px;
     text-align: center;
-    line-height: 50px;
-    
 }
-
-body {
-    margin: 0;
-    padding: 0;
-}
-
-section {
-    flex:  200px;
-    margin: 80px;
-    padding: 120px;
-    background-color: #f8fcf9;
-}
-
-.container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 10px;
-}
-
-footer {
+footer{
     background-color: #141313;
     color: #fff;
-    padding: 20px 0;
+    justify-content: center;
+    padding-left: 10%;
+    padding-right: 10%;
+    padding-top: 15px;
+    padding-bottom: 15px;  
 }
-
-footer p {
-    text-align: center;
-    margin: 0;
-}
-
-section{
-    margin: 0px;
-    padding: 20px;
-    background-color: #31829b;
-    text-align: center;
-    
-}
-
-h1 ul li a{
-    text-align: center;
-    margin: 0%;
-}
-
-section{
-    margin: 0px;
-    padding: 20px;
-    background-color: #31829b;
-    text-align: center;
-    
-}
-
-h1 ul li a{
-    text-align: center;
-    margin: 0%;
-}
-
-section{
-    margin: 0px;
-    padding: 20px;
-    background-color: #31829b;
-    text-align: center;
-    
-}
-
-h1 ul li a{
-    text-align: center;
-    margin: 0%;
-}
-
-.renovables{
-    align-items: center;
-    float: center;
-    margin: 0%;
-    padding: 20px;
-    background-color: #31829b;
+footer p{
     text-align: center;
 }
-.contenedor1 img{
-    width: 40%;
-    border-radius: 5px;   
-}
-.contenedor1{
+
+.todo{
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    padding-left: 20%;
-    padding-right: 20%;
-    align-items: center;
 }
-.contenedor1 p{
-    font-size: 25px;
-    
+.menu{
+    display: none;
 }
-
-section{
-    margin: 0px;
-    padding: 20px;
-    background-color: #31829b;
-    text-align: center;
-    
+.links{display: flex;}
+.links .i{
+    display: none;
 }
-
-h1 ul li a{
-    text-align: center;
-    margin: 0%;
+.links:hover .e{
+    display: none;
 }
-
-section{
-    margin: 0px;
-    padding: 20px;
-    background-color: #31829b;
-    text-align: center;
-    
+.links:hover .i{
+    display: block;
+    color: #49b5d6;
 }
-
-h1 ul li a{
-    text-align: center;
-    margin: 0%;
+@media (max-width:950px){
+    .contenedor1{
+        flex-direction: column;
+    }
+    .renovables{
+        margin-bottom: 50px;
+    }
+    .contenedor1 img{
+        margin-bottom: 10px;
+        min-width: 275.3px;
+    }
+    .contenedor1 p{
+        min-width: 275.3px;
+    }
 }
-
-section{
-    margin: 0px;
-    padding: 20px;
-    background-color: #31829b;
-    text-align: center;
-    
+@media (max-width:430px){
+    .sidebar{
+        display: none;
+    }
+    .menu{
+        display: flex;
+        border-radius: 4px;
+        margin-right: 30px;
+    }
+    .menu li{
+        text-align: center;
+        color: #fff;
+        list-style: none;
+        width: 150px;
+        padding: 8px;
+        background-color: #333;
+    }
+    .menu li a{
+        color: #fff;
+        text-decoration: none;
+    }
+    .oculto{
+        display: none;
+    }
+    .principal{
+        border-radius: 4px;
+    }
+    .principal:hover #mostrar{
+        border-radius: 4px;
+        cursor: pointer;
+        display: flex;
+        flex-direction: column;
+        position: absolute;
+        left:  15%;
+    }
+    .menu li:hover{
+        background-color: #666;
+    }
+    #superior{
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+    }
+    #inferior{
+        border-bottom-left-radius: 4px;
+        border-bottom-right-radius: 4px;
+    }
 }
-
-h1 ul li a{
-    text-align: center;
-    margin: 0%;
-}
-
-.renovables{
-    align-items: center;
-    float: center;
-    margin: 0%;
-    padding: 20px;
-    background-color: #31829b;
-    text-align: center;
-}
-.contenedor1 img{
-    width: 40%;
-    border-radius: 5px;   
-}
-.contenedor1{
-    display: flex;
-    justify-content: space-between;
-    padding-left: 20%;
-    padding-right: 20%;
-    align-items: center;
-}
-.contenedor1 p{
-    font-size: 25px;
-    
-}
-
-
